--- a/styles/indexStyles.css
+++ b/styles/indexStyles.css
@@ -3,12 +3,12 @@
   }
 
 head {
-	background-color: darkgreen;
+	background-color: rgb(40, 10, 80);
 }
 
 body {
 	/*margin: 0px 10%;*/
-	background-color: rgb(140, 178, 154);
+	background-color: rgb(255, 255, 255);
 }
 
 .heading {
@@ -30,17 +30,24 @@ body {
 }
 
 h1 {
-	font-size:6vw;
+	font-size:5vw;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	color: rgb(238, 253, 233);
-	text-shadow: 1px 1px 2px darkgreen;
+	color: rgb(61, 20, 114);
+	text-shadow: 1px 1px 2px rgb(40, 10, 80);
 }
 
 h2 {
-	font-size: 4vw;
+	font-size:3vw;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	color: rgb(238, 253, 233);
-	text-shadow: 1px 1px 2px darkgreen;
+	color: rgb(61, 20, 114);
+	text-shadow: 1px 1px 2px rgb(40, 10, 80);
+}
+
+h3 {
+	font-size: 3vw;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	color: rgb(40, 10, 80);
+	text-shadow: 1px 1px 2px rgb(40, 10, 80);
 }
 
 img {
@@ -55,7 +62,7 @@ img {
 
 a:link, a:visited {
 	text-decoration: none;
-	background-color: rgb(48,176,82);
+	background-color: rgb(255, 120, 218);
 	color: white;
 	font-size: 2.75vw;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -70,7 +77,7 @@ a:link, a:visited {
 }
 
 a:hover {
-	background-color: rgb(32,135,60);
+	background-color: rgb(253, 156, 227);
 	box-shadow: 1px 1px 2px black;
 }
 
